Put out reprepro command to log, Some adaptions for testing