@@ -1,6 +1,35 @@
+buildscript {
+    repositories {
+      jcenter()
+    }
+  
+    dependencies {
+      classpath 'org.akhikhl.gretty:gretty:+'
+    }
+}
+
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'maven-publish'
+apply plugin: 'org.akhikhl.gretty'
+
+compileJava.options.encoding = 'ISO-8859-1'
+
+def testProject = project(":server:testRuntime")
+
+gretty {
+    servletContainer='tomcat7'
+    logDir='build'
+    jvmArgs = ['-XX:MaxPermSize=256m',
+               '-Dde.innovationgate.wga.configpath=${testProject.file("wga")}',
+               '-Dde.innovationgate.wga.defaultplugins=${testProject.file("wga/external-default-plugins")}',
+               '-Dde.innovationgate.wga.unittest=true',
+               '-Dde.innovationgate.wga.unittest.logdir=${testProject.file("wga/test")}',
+               '-Dhibernate.jdbc.use_streams_for_binary=true',
+               '-Dde.innovationgate.wga.devplugins=${testProject.file("plugins")}'
+    ];
+}
+
 
 compileJava.options.encoding = 'ISO-8859-1'
 ant.basedir=project.rootDir
@@ -11,16 +40,12 @@ dependencies {
     
     compileClasspath project(":wgaBuildTools");
     
-    testCompile 'javax.servlet:javax.servlet-api:3.0.1'
-    testCompile 'javax.websocket:javax.websocket-api:1.1'
-    testCompile 'javax.servlet.jsp:jsp-api:2.2'
-    testCompile 'javax.mail:javax.mail-api:1.4.7'
-    testCompile 'org.glassfish.jersey.core:jersey-client:2.19'
-    testCompile 'net.sourceforge.htmlunit:htmlunit:2.19'
-    testCompile 'org.apache.ant:ant:1.9.7'
-    testCompile 'org.glassfish.jersey.media:jersey-media-multipart:2.19'
-    testCompile 'org.glassfish.jersey.media:jersey-media-json-processing:2.19'
-    testCompile 'org.glassfish.jersey.media:jersey-media-json-jackson:2.19'
+    gretty 'com.sun.mail:javax.mail:1.4.7'
+    gretty 'javax.activation:activation:1.1.1'
+    gretty 'org.apache.geronimo.specs:geronimo-activation_1.1_spec:1.1'
+    gretty 'org.apache.geronimo.specs:geronimo-jta_1.1_spec:1.1.1'
+    gretty 'org.glassfish.main.transaction:javax.transaction:3.1.2.2'
+
     
 }
 
